# thndrs-web-mcp

./: .gitignore  Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/src/brave/: error.rs  mod.rs  request.rs  response.rs
crates/client/src/extract/: links.rs  mod.rs  normalize.rs
crates/client/src/fetch/: mod.rs  robots.rs  ssrf.rs  url.rs
crates/client/src/render/: mod.rs
crates/core/: Cargo.toml
crates/core/migrations/: 001_snapshots.sql  002_search_cache.sql
crates/core/src/: error.rs  lib.rs
crates/core/src/cache/: connection.rs  hash.rs  migrations.rs  mod.rs  search.rs  snapshots.rs
crates/core/src/config/: mod.rs  validation.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  handler.rs  main.rs
crates/server/src/tools/: mod.rs  web_batch_open.rs  web_extract.rs  web_open.rs  web_search.rs
crates/server/src/tools/cache/: get.rs  mod.rs  purge.rs
doc/: architecture.txt  brave_search.txt  configuration.txt  e2e.txt  fetch.txt  references.txt  roadmap.txt  schema.txt  security.txt  testing.txt
