[package]
name = "thndrs-client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = [
    "rustls-tls",
    "gzip",
    "brotli",
    "deflate",
    "json",
] }
url = "2"
thiserror = "2"
tokio = { version = "1", features = ["time", "net"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.11.0"

# SSRF protection
ipnet = "2"

# robots.txt
robotstxt-rs = "0.1"

# hashing for cache keys
sha2 = "0.10"
hex = "0.4"
regex = "1"

# extraction
lectito-core = { git = "https://github.com/stormlightlabs/lectito", features = [
    "markdown",
    "siteconfig",
    "fetch",
], default-features = false }
scraper = "0.25"

# cache types from core
thndrs-core = { path = "../core" }


[lints]
workspace = true
